<resources>
    <string name="app_name" translatable="false">World News</string>

    <!--  Bottom menu  -->
    <string name="us" translatable="false">USA</string>
    <string name="pl" translatable="false">POLAND</string>
    <string name="ua" translatable="false">UKRAINE</string>
    <string name="ru" translatable="false">RUSSIA</string>

    <!--  Clear news confirmation  -->
    <string name="dialog_delete_no">YES</string>
    <string name="dialog_delete_yes">NO</string>
    <string name="dialog_delete_message">Clear news?</string>

    <!--  Clear news result  -->
    <string name="news_deleted">NEWS DELETED</string>
    <string name="choose_country_to_start">choose country to start</string>

    <!-- Detail Page  -->
    <string name="detail_read_article_btn">READ article</string>
    <string name="detail_share_to">Share To:</string>

    <!--  Favourites Page  -->
    <string name="favourite_swipe_to_delete_news_from_favourite">SWIPE TO DELETE NEWS FROM FAVOURITE</string>
    <string name="favourite_not_in_list_no_more">Not more favourite</string>
    <string name="favourite_empty_list">Empty list</string>

    <!--  Search Page  -->
    <string name="search_type_your_query">type your query</string>
    <string name="search_no_results">No results</string>
    <string name="search_error_on_loading">Error while loading</string>

    <!--  Utils  -->
    <string name="no_network_connection">no network connection</string>

    <!--  Titles  -->
    <string name="title_usa">United States</string>
    <string name="title_russia">Russia</string>
    <string name="title_ukraine">Ukraine</string>
    <string name="title_poland">Poland</string>
    <string name="title_source">Source</string>
    <string name="title_article">Article</string>
    <string name="title_favourite">Favourite news</string>
    <string name="title_search">Search news</string>

    <!--  Alerts  -->
    <string name="alert_error_news">Download error: %1$s</string>
    <string name="alert_empty_news">Empty list</string>
    <string name="alert_forced_updated_news">"Update completed"</string>
    <string name="alert_no_updates">No updates</string>
    <string name="alert_unknown_error">Unknown error</string>

    <!--  Descriptions  -->
    <string name="description_circle" translatable="false">circle</string>
    <string name="description_basket" translatable="false">basket</string>
    <string name="description_image_article" translatable="false">image</string>
    <string name="description_red_line" translatable="false">line</string>
    <string name="description_favourite_btn" translatable="false">favourite</string>
    <string name="description_share" translatable="false">share</string>
    <string name="description_author" translatable="false">author</string>
    <string name="description_eye" translatable="false">eye</string>
    <string name="unfortunately_error_has_happened">Downloading error happened</string>
    <string name="try_again">TRY AGAIN</string>

    <!-- Menu Items -->
    <string name="menu_item_search_news">Search news</string>
    <string name="menu_item_favourite_news">Favourite news</string>
    <string name="menu_item_topics">TOPICS</string>
    <string name="menu_item_all_topics">All topics</string>
    <string name="menu_item_general_topics">General topics</string>
    <string name="menu_item_health_topics">Health topics</string>
    <string name="menu_item_sports_topics">Sports topics</string>
    <string name="menu_item_forced_download">Forced download</string>
    <string name="menu_item_clear_old_news">Clear old news</string>
    <string name="read_news_offline">READ SAVED NEWS OFF-LINE</string>

</resources>