<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".presentation.ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/constraint_padding_bottom_detail">

        <ImageView
            android:id="@+id/detail_img"
            style="@style/news_image"
            android:contentDescription="@string/description_image_article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_bar"
            style="@style/red_bar"
            android:contentDescription="@string/description_red_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_img" />

        <ImageView
            android:id="@+id/author_label_img"
            style="@style/icon_author"
            android:contentDescription="@string/description_author"
            app:layout_constraintBottom_toBottomOf="@+id/detail_bar"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_img" />

        <TextView
            android:id="@+id/author"
            style="@style/author"
            app:layout_constraintBottom_toBottomOf="@+id/author_label_img"
            app:layout_constraintStart_toEndOf="@+id/author_label_img"
            app:layout_constraintTop_toTopOf="@+id/author_label_img" />

        <TextView
            android:id="@+id/detail_title"
            style="@style/title_news"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_bar" />

        <TextView
            android:id="@+id/detail_publish_time"
            style="@style/publish_time"
            app:layout_constraintStart_toEndOf="@+id/detail_publishedAt"
            app:layout_constraintTop_toTopOf="@+id/detail_publishedAt" />

        <TextView
            android:id="@+id/detail_publishedAt"
            style="@style/publish_day"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <TextView
            android:id="@+id/detail_content"
            style="@style/content"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_publishedAt" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="362dp" />

        <Button
            android:id="@+id/open_article_btn"
            style="@style/btn_read_article_web"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_content" />

        <ImageView
            android:id="@+id/favourite_btn"
            style="@style/btn_favourite"
            app:layout_constraintBottom_toBottomOf="@+id/open_article_btn"
            app:layout_constraintStart_toEndOf="@+id/open_article_btn"
            app:layout_constraintTop_toTopOf="@+id/open_article_btn" />

        <ImageView
            android:id="@+id/share_btn"
            style="@style/btn_share"
            app:layout_constraintBottom_toBottomOf="@+id/favourite_btn"
            app:layout_constraintStart_toEndOf="@+id/favourite_btn"
            app:layout_constraintTop_toTopOf="@+id/favourite_btn"
            app:layout_constraintVertical_bias="0.0" />

        <include layout="@layout/part_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>